separate css file

--- a/index.html
+++ b/index.html
@@ -4,33 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link href="./styles.css" rel="stylesheet" />
     <title>Virat Kohli</title>
-    <style>
-      img {
-        width: 200px;
-        height: 200px;
-        border-radius: 100px;
-        float: center;
-      }
-      .center {
-        display: block;
-        margin-right: auto;
-        margin-left: auto;
-        margin-bottom: 10px;
-        object-fit: cover;
-        border: 0px;
-      }
-      table,
-      th,
-      td {
-        border: 1px solid rgb(166, 2, 2);
-      }
-      h1.header {
-        text-align: center;
-        margin: auto;
-      }
-    </style>
   </head>
 
   <body style="background-color: lightgreen; text-emphasis-color: crimson">
