--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
+    <marquee id="marquee">This website is currently under development. Scources for text - Wikimedia,Fandome.</marquee>
     <center><h1 class="header">Virat Kohli</h1></center>
     <a
       href="https://internationalcricket.fandom.com/wiki/Virat_Kohli"
@@ -42,7 +43,7 @@
     <button onclick="sayHello()">Click me!</button>
     <script tabindex="text/javascript">
       function sayHello() {
-        console.log("Hello World");
+        console.log("Testing buttons");
       }
     </script>
     <h2 id="about">About Kohli</h2>
