--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
-    <marquee id="marquee">This website is currently under development. Scources for text - Wikimedia,Fandome.</marquee>
+    <marquee id="marquee">This website is currently under development. Scources for text - Wikipedia,Fandome.</marquee>
     <center><h1 class="header">Virat Kohli</h1></center>
     <a
       href="https://internationalcricket.fandom.com/wiki/Virat_Kohli"
@@ -284,7 +284,7 @@
         <td>223</td>
         <td>26</td>
         <td>251</td>
-        <td>368</td>
+        <td>368</td>  
         <td>4</td>
         <td>2/25</td>
         <td>2/25</td>
@@ -296,5 +296,8 @@
       </tr>
     </table>
     <a href="#top">To Top</a>
+    <h4> Socials </h4>
+    <a href="https://github.com/invin1" target = "_blank"><img class="github" width="10px" src="/Images/GitHub-Mark.png" alt="Github icon" ></a>
+    <a href="https://twitter.com/aaravsinghking2"><img class="twitter"src="/Images/124021.png" alt="Twitter icon"></a>
   </body>
 </html>
