--- a/index.html
+++ b/index.html
@@ -298,6 +298,6 @@
     <a href="#top">To Top</a>
     <h4> Socials </h4>
     <a href="https://github.com/invin1" target = "_blank"><img class="github" width="10px" src="/Images/GitHub-Mark.png" alt="Github icon" ></a>
-    <a href="https://twitter.com/aaravsinghking2"><img class="twitter"src="/Images/124021.png" alt="Twitter icon"></a>
+    <a href="https://twitter.com/aaravsinghking2" target="_blank"><img class="twitter"src="/Images/124021.png" alt="Twitter icon"></a>
   </body>
 </html>
