--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
         console.log("Testing buttons");
       }
     </script>
+    <ul type="square">What is this website about?
+      <li>About Virat Kholi </li>
+      <li>Learning HTML</li>
+    </ul>
     <h2 id="about">About Kohli</h2>
     <p>
       <strong>Virat Kohli </strong>(born 5 November 1988) is an Indian cricketer
