--- a/index.html
+++ b/index.html
@@ -46,9 +46,15 @@
         console.log("Testing buttons");
       }
     </script>
-    <ul type="square">What is this website about?
-      <li>About Virat Kholi </li>
-      <li>Learning HTML</li>
+     <div style='text-align:right'>
+      <h4> Socials </h4>
+      <a href="https://github.com/invin1" target = "_blank"><img class="github"     src="/Images/GitHub-Mark.png" alt="Github icon" ></a>
+      <a href="https://twitter.com/aaravsinghking2" target="_blank"><img class="twitter"src="/Images/124021.png" alt="Twitter icon" ></a>
+    </div>
+    <h2> What is this Website about?</h2> 
+    <ul type="square"> 
+      <li><b>About Virat Kholi </b></li>
+      <li><b>Learning HTML</b></li>
     </ul>
     <h2 id="about">About Kohli</h2>
     <p>
@@ -300,8 +306,6 @@
       </tr>
     </table>
     <a href="#top">To Top</a>
-    <h4> Socials </h4>
-    <a href="https://github.com/invin1" target = "_blank"><img class="github" width="10px" src="/Images/GitHub-Mark.png" alt="Github icon" ></a>
-    <a href="https://twitter.com/aaravsinghking2" target="_blank"><img class="twitter"src="/Images/124021.png" alt="Twitter icon"></a>
+    
   </body>
 </html>
